<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity2">


    <TextView
            android:text="@string/Prenom"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.046" app:layout_constraintVertical_bias="0.022"/>
    <TextView
            android:text="@string/Nom"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.043" app:layout_constraintVertical_bias="0.125"/>
    <TextView
            android:text="@string/Age"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.042" app:layout_constraintVertical_bias="0.242"/>
    <TextView
            android:text="@string/Numéro"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.041" app:layout_constraintVertical_bias="0.36"/>
    <TextView
            android:text="@string/Domainedecompétence"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.085" app:layout_constraintVertical_bias="0.454"/>


    <TextView
            android:layout_width="114dp"
            android:textSize="20sp"
            android:layout_height="28dp" android:id="@+id/Prenom"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.401" app:layout_constraintVertical_bias="0.023"/>
    <TextView
            android:layout_width="113dp"
            android:textSize="20sp"
            android:layout_height="30dp" android:id="@+id/Nom"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.385" app:layout_constraintVertical_bias="0.125"/>
    <TextView
            android:layout_width="124dp"
            android:textSize="20sp"
            android:layout_height="24dp" android:id="@+id/Age"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.401" app:layout_constraintVertical_bias="0.245"/>
    <TextView
            android:layout_width="127dp"
            android:textSize="20sp"
            android:layout_height="30dp" android:id="@+id/numero"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.419" app:layout_constraintVertical_bias="0.362"/>
    <TextView
            android:layout_width="111dp"
            android:textSize="20sp"
            android:layout_height="32dp" android:id="@+id/Domaine"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.886" app:layout_constraintVertical_bias="0.457"/>
    <Button
            android:text="@string/Retour"
            android:onClick="Retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.674"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.776"/>
    <Button
            android:text="@string/Continuer"
            android:onClick="Continuer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.666"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"/>
</androidx.constraintlayout.widget.ConstraintLayout>